fixing some css alignment issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,17 +63,16 @@ header nav ul li a {
     display: flex;
     flex-wrap: wrap;
     padding: 20px 35px;
-    justify-content: center;
-    align-items: flex-start;
 }
 
 .intro {
-    max-width: 15%;
+    max-width: 35%;
     border-radius: 50%;
+    align-items: center;
 }
 
 .panda img {
-    max-width: 15%;
+    max-width: 250px;
     border-radius: 50%;
 }
 
@@ -94,8 +93,6 @@ h3 {
 }
 
 #my-work {
-    justify-content: center; 
-    justify-items: center; 
     text-align: center;
     margin: auto;
 }
